src/main/java/org/example/rippleback/core/error/exceptions/common/FobiddenException.java
package org.example.rippleback.core.error.exceptions.common;

public class FobiddenException extends RuntimeException {
    public FobiddenException(String message) {
        super(message);
    }
}
